--- a/infra/nginx/default.conf
+++ b/infra/nginx/default.conf
@@ -29,4 +29,9 @@ server {
     location ~ /\.(?!well-known).* {
         deny all;
     }
+
+    send_timeout 180;
+    proxy_connect_timeout 600;
+    proxy_read_timeout    600;
+    proxy_send_timeout    600;
 }
